2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Gilles Dartiguelongue
	<gilles.dartiguelongue@esiee.org> to update the intltool
	requirements (Closes: #555283)

============ Version 2.24.1

2008-10-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.1
	* Makefile.am: fix dist for new intltool

2008-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-missing-plugins.c
	(bacon_video_widget_gst_get_toplevel): Fix getting the
	top-level window when the video widget isn't inside a
	GtkPlug

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_add_one_mrl):
	Disable the code to remove deleted files from the playlist,
	it screws up the ->current pointer (Helps: #550225)

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README.browser-plugin: Fix typo spotted
	by Yan Morin <progysm@gmail.com>, the keyword is "disabled", not
	"disable"

============ Version 2.24.0

2008-09-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.0
	* Makefile.am: Remove COPYING.LIB from dist

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* COPYING.LIB: Remove obsolete file, spotted by
	Christian Persch

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Fix missing break
	statement, spotted by Robin Stocker <robin@nibor.org>

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/totem-menu.c (totem_action_add_recent):
	* src/totem-menu.h: Fix recent-menu not adding anything
	because it couldn't get a fast mime-type for the file,
	(Closes: #551360), also fix addition of streams to the
	list, otherwise nothing to go in the "Open Location"
	dialogue

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_mrls): Also allow the Fluendo MPEG
	demuxers recently moved to GStreamer main
